@@ -1,5 +1,15 @@
 2007-08-09  Mitz Pettel  <mitz@webkit.org>
 
+        Reviewed by Adam Roben.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=14362
+          Opening a select list always highlights first element in list
+
+        * platform/win/PopupMenuWin.cpp:
+        (WebCore::PopupWndProc): Track the mouse only inside the popup.
+
+2007-08-09  Mitz Pettel  <mitz@webkit.org>
+
         Reviewed by Dave Hyatt.
 
         - fix http://bugs.webkit.org/show_bug.cgi?id=14875
